--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "alaska-field-password",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Alaska password field",
   "main": "index.js",
   "scripts": {
@@ -34,6 +34,6 @@
     "rimraf": "^2.5.2"
   },
   "dependencies": {
-    "bcrypt": "^0.8.5"
+    "bcryptjs": "^2.3.0"
   }
 }
